--- a/style.css
+++ b/style.css
@@ -4,10 +4,6 @@
 }
 body{
     height: 100vh;
-    /* background-image: url(./pexels-arnie-chou-1229042.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover; */
 }
 h1{
     font-weight: bold;
@@ -22,8 +18,7 @@ p{
     left: 40%;
     transform: translate(0, -50%);
     padding: 10px;
-    /* border-radius: 10%;
-    backdrop-filter: blur(5px); */
+    box-shadow: 10px 5px 5px 5px rgb(80, 80, 80) ;
 }
 #btn{
     background-color: rgb(184, 0, 0);
@@ -35,10 +30,13 @@ p{
     margin-left: 20%;
     cursor: pointer;
 }
+#btn:hover{
+    box-shadow: 2px 2px 2px 2px rgb(80, 80, 80) ;
+}
 
 #timer{
     color: rgb(0, 0, 0);
-    font-size: 45px;
+    /* font-size: 45px; */
     text-align: center;
     margin-top: 10px;
     height: 50px;
